feat: get all users
