# server/docs/swagger.json
@@ -9,6 +9,33 @@
     "host": "localhost:8080",
     "paths": {
         "/profiles": {
+            "get": {
+                "description": "retrieve all user profiles in the system",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profiles"
+                ],
+                "summary": "get all user profiles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Profile"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.errorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "upload user profile",
                 "consumes": [
