# server/internal/domain/repositories.go
@@ -4,4 +4,5 @@ type ProfileRepository interface {
 	CreateProfile(profile *Profile) error
 	UpdateProfile(profile *Profile) error
 	FindOneByUsername(username string) (*Profile, error)
+	FindAll() ([]*Profile, error)
 }
